# cloud-landerox-infra

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .terraform-docs.yml  .tflint.hcl  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  renovate.json
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  drift-detection.yml  terraform.yml
docs/: architecture.md  cicd.md  development.md  governance.md
terraform/: Justfile  README.md  apis.tf  backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/config/: prd.tfvars
terraform/config/artifact_registry/: main.tf  outputs.tf  repositories.tf  variables.tf
terraform/config/bigquery/datasets/: locals.tf  main.tf  outputs.tf  variables.tf
terraform/config/cloud_run/: main.tf  outputs.tf  services.tf  variables.tf
terraform/config/iam/: custom_roles.tf  iam_bindings.tf  main.tf  outputs.tf  service_accounts.tf  variables.tf
terraform/config/scheduler/: jobs.tf  main.tf  outputs.tf  variables.tf
terraform/config/secrets/: main.tf  outputs.tf  secrets.tf  variables.tf
terraform/config/storage/: buckets.tf  main.tf  outputs.tf  variables.tf
terraform/modules/artifact_registry/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/bigquery/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/bigquery/datasets/: main.tf  outputs.tf  variables.tf
terraform/modules/bigquery/routines/: main.tf  outputs.tf  variables.tf
terraform/modules/bigquery/scheduled_queries/: main.tf  outputs.tf  variables.tf
terraform/modules/bigquery/tables/: main.tf  outputs.tf  variables.tf
terraform/modules/bigquery/views/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud_run/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/iam/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/scheduler/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/secrets/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/storage/: README.md  main.tf  outputs.tf  variables.tf
terraform/policies/checkov/: .checkov.yaml  README.md
