[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloud-landerox"
version = "1.0.0"
description = "Modular Infrastructure as Code (IaC) framework for Data Engineering, Generative AI, and Real-time Analytics experiments on Google Cloud Platform."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "Fernando Landero", email = "landerox@gmail.com" }]
keywords = [
    "terraform",
    "gcp",
    "gitops",
    "iac",
    "data-engineering",
    "generative-ai",
    "rag",
    "analytics",
    "bigquery",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = []

[dependency-groups]
dev = [
    "commitizen>=4.11.0",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "ruff>=0.14.11",
    "checkov>=3.2.497",
]

[project.urls]
Homepage = "https://landerox.github.io"
Repository = "https://github.com/landerox/cloud-landerox"
Documentation = "https://github.com/landerox/cloud-landerox/blob/main/docs"
Issues = "https://github.com/landerox/cloud-landerox/issues"

[tool.uv]
package = false

[tool.hatch.build.targets.wheel]
packages = []

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
version_files = ["pyproject.toml:^version"]
update_changelog_on_bump = false
changelog_file = "CHANGELOG.md"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "RUF", # ruff-specific
]
ignore = [
    "E501",    # line too long (formatter handles this)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.isort]
known-first-party = []
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
